r105
    * /test/bootstrap/unit.php : creation of a sfContext
    * /test/unit/ConfiguratorTest.php : new file implementing tests for
      Configurator class
    * /lib/misc/Configuration.class.php : $associationId is now given as
      parameter to avoid use of sfContext in this class
    * ConfigForm.class.php : code has been refactored to give $associationId
    * association : actions > code has been refactored to give $associationId
    * MembrePeer.php : doSelectOrderBy > code has been refactored to provide 
      $associationId to Configurator
    * AssociationPeer.php : new method retrieveByName($name)
    * All the files : tabs have been replaced by spaces
    

r104 - september, 13, 2009
    * /doc/TROUBLESHOOTING-FR : new file, indexing known issues
    * /doc/README-FR refers to TROUBLESHOOTING-FR in case of issue
    * membre : indexSuccess.php > legend block has been redesigned
    * cotisationtype : indexSuccess.php > validity entry in the header of table
      is now specified as months and not in years
    * CotisationTypeForm.class.php : default value of 'valide' has been set to
      12 months
    * form.css : formLinkButton size has been adjusted (a little bit smaller)


r103 - september, 12, 2009
    * /web/install.php : has been removed to avoid loop issue
    * /lib/vendor/phoogle/phoogle.php : we prevent error when using function
      file_get_contents with Yahoo API
    * /lib/misc/DbTools.class.php : checkMySQLConnection() method has been set
      as public static instead of being private
    * /doc/README : up to date
    * /doc/README-FR : up to date


r102 - september, 12, 2009
    * update : new template 'performError.php'
    * PiwamDataPeer : new retrieveByKey($key) method
    * PiwamDataPeer : fixes bug in set() method
    * install : actions > methods _executeSQLFile and _checkMySQLConnection have
      been replaced by the DbTools call


r101 - september, 12, 2009
    * updates/1.1beta2-to-1.1/r100.sql : fixes syntax error

